--- a/public/index.html
+++ b/public/index.html
@@ -39,8 +39,8 @@
     </style>
   </head>
   <body>
-    <h1>Hello Firebase users!</h1>
-    <button onclick="googleLogin()">Login with Google</button>
+    <h1 id="title"></h1>
+    <input onchange="updatePost(event)">
     <script src="app.js"></script>
   </body>
 </html>
